; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/FCEU/FCEU/~attic/pc/extr_sdl-sound.c_fillaudio.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/FCEU/FCEU/~attic/pc/extr_sdl-sound.c_fillaudio.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@BufferIn = common dso_local global i64 0, align 8
@Buffer = common dso_local global i64* null, align 8
@BufferRead = common dso_local global i64 0, align 8
@BufferSize = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32*, i32)* @fillaudio to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @fillaudio(i8* %0, i32* %1, i32 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i64*, align 8
  %8 = alloca i64, align 8
  store i8* %0, i8** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32 %2, i32* %6, align 4
  %9 = load i32*, i32** %5, align 8
  %10 = bitcast i32* %9 to i64*
  store i64* %10, i64** %7, align 8
  %11 = load i32, i32* %6, align 4
  %12 = ashr i32 %11, 1
  store i32 %12, i32* %6, align 4
  br label %13

13:                                               ; preds = %31, %3
  %14 = load i32, i32* %6, align 4
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %16, label %38

16:                                               ; preds = %13
  store i64 0, i64* %8, align 8
  %17 = load i64, i64* @BufferIn, align 8
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %30

19:                                               ; preds = %16
  %20 = load i64*, i64** @Buffer, align 8
  %21 = load i64, i64* @BufferRead, align 8
  %22 = getelementptr inbounds i64, i64* %20, i64 %21
  %23 = load i64, i64* %22, align 8
  store i64 %23, i64* %8, align 8
  %24 = load i64, i64* @BufferRead, align 8
  %25 = add i64 %24, 1
  %26 = load i64, i64* @BufferSize, align 8
  %27 = urem i64 %25, %26
  store i64 %27, i64* @BufferRead, align 8
  %28 = load i64, i64* @BufferIn, align 8
  %29 = add nsw i64 %28, -1
  store i64 %29, i64* @BufferIn, align 8
  br label %31

30:                                               ; preds = %16
  store i64 0, i64* %8, align 8
  br label %31

31:                                               ; preds = %30, %19
  %32 = load i64, i64* %8, align 8
  %33 = load i64*, i64** %7, align 8
  store i64 %32, i64* %33, align 8
  %34 = load i64*, i64** %7, align 8
  %35 = getelementptr inbounds i64, i64* %34, i32 1
  store i64* %35, i64** %7, align 8
  %36 = load i32, i32* %6, align 4
  %37 = add nsw i32 %36, -1
  store i32 %37, i32* %6, align 4
  br label %13

38:                                               ; preds = %13
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
